<resources>
    <string name="app_name">Quiz App</string>
    <string name="question_3">Question 3</string>
    <string name="question_3_header">What is the capital of spain ?</string>
    <string name="write_answer">Write your answer here</string>
    <string name="question_2">Question 2</string>
    <string name="question_2_header">Which countries are in Europe ?</string>
    <string name="answer2_1">Portugal</string>
    <string name="answer2_2">India</string>
    <string name="answer2_3">Luxembourg</string>
    <string name="question_1">Question 1</string>
    <string name="question_1_header">What is the capital of Sweden ?</string>
    <string name="paris">Paris</string>
    <string name="stockholm">Stockholm</string>
    <string name="london">London</string>
    <string name="question_4">Question 4</string>
    <string name="question_4_header">Munich is ....</string>
    <string name="answer4_1">Is the capital of Germany</string>
    <string name="answer4_2">Is a big city in Germany</string>
    <string name="answer4_3">Located at the centre of Europe</string>
    <string name="question_5">Question 5</string>
    <string name="question_5_header">Where is Italy located in Europe ?</string>
    <string name="north">North</string>
    <string name="south">South</string>
    <string name="east">East</string>
    <string name="west">West</string>
    <string name="submit">Submit</string>
    <string name="your_grade_is">Your Grade is</string>
    <string name="make_sure_answer_all_questions">Please make sure you answer all the questions</string>
    <string name="next">Next</string>
    <string name="right_answer">Madrid</string>
    <string name="question_6">Question 6</string>
    <string name="question_6_header">What is the capital of Portugal</string>
    <string name="right_answer_q6">Lisbon</string>

</resources>